# clion_cmake_nRF5_stub

./: .gitignore  CMakeLists.txt  SDK_NRF5.cmake  copy_headers.cmake  debug.xml  flash_debug.xml  nrf5_toolchain.cmake  readme.md  verify_tools.cmake
config/: readme.txt
src/: readme.txt
